# automation-test-with-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.agents/rules/: backend_clean_architecture.md  context7_mcp.md  frontend_atomic_design.md
.agents/workflows/: commit.md
config/: config.yaml  pricing.py
dashboard/backend/: main.py
dashboard/frontend/: AGENTS.md  package-lock.json  package.json
dashboard/frontend/src/app/: globals.css  layout.tsx  page.tsx
docker/: backend.Dockerfile  frontend.Dockerfile  mlflow.Dockerfile  worker.Dockerfile
docs/: docker_guide.md  google_sheets_setup.md  gpt_prompt_guide.md  test_case_template.md
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
scratch/: check_runtime_import.py
src/: __init__.py
src/application/services/: gpt_bridge.py  task_analyzer.py  test_suite_runner.py
src/application/use_cases/: get_metrics.py  manage_profiles.py  run_automation.py  run_excel.py  run_gpt_automation.py  stream_job_updates.py
src/application/worker/: worker.py
src/core/: agent_factory.py
src/domain/entities/: auth_profile.py
src/domain/exceptions/: base.py
src/domain/interfaces/: agent.py  auth_connector.py  auth_profile_repository.py  messaging.py  metrics.py  storage.py
src/domain/models/: metrics.py
src/infrastructure/agent/: agent_factory.py  browser_use_wrapper.py
src/infrastructure/config/: loader.py
src/infrastructure/di/: providers.py
src/infrastructure/monitoring/: langfuse_logger.py  langfuse_reader.py  mlflow_logger.py  mlflow_reader.py  report_generator.py
src/infrastructure/storage/: json_profile_repository.py
src/monitoring/: logger.py  report_generator.py
src/presentation/api/: error_handlers.py  main.py
src/presentation/api/routers/: auth_profiles.py  automation.py  metrics.py
src/presentation/schemas/: auth_profiles.py  automation.py
src/prompts/: analyzer_prompts.py  gpt_bridge_prompts.py  test_case_prompts.py
src/utils/: google_sheets.py
tests/: data_driven_test.py  google_search_test.py  structured_test_runner.py  test_langfuse_connection.py  verify_sheets.py
tests/unit/: test_infrastructure_clean_architecture.py
tests/unit/application/use_cases/: test_manage_profiles.py  (+1 more)
(+13 files in other folders)
