[project]
name = "browser-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.2",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.9",
    "mlflow>=3.10.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
]
